[android] Added new icons for toolbar and new states for them

--- a/android/res/values/colors.xml
+++ b/android/res/values/colors.xml
@@ -40,8 +40,8 @@
   <!-- Backgrounds -->
   <color name="bg_window">#FFEEEEEE</color>
   <color name="bg_window_night">#FF32363A</color>
-  <color name="bg_primary">#FF1F9952</color>
-  <color name="bg_primary_night">#FF1E2226</color>
+  <color name="bg_primary">#1F9952</color>
+  <color name="bg_primary_night">#1E2226</color>
   <color name="bg_cards">@android:color/white</color>
   <color name="bg_cards_night">#FF3C4044</color>
   <color name="bg_panel">@color/bg_window</color>
@@ -57,8 +57,8 @@
   <color name="bg_menu_open">#FFFFFFFF</color>
   <color name="bg_menu_open_night">#FF2D3237</color>
 
-  <color name="bg_statusbar">#FF197E46</color>
-  <color name="bg_statusbar_night">#FF000000</color>
+  <color name="bg_statusbar">#197841</color>
+  <color name="bg_statusbar_night">#14181C</color>
 
   <color name="bg_azimut_arrow">#1D414651</color>
   <color name="fg_azimut_arrow">#FFFFFFFF</color>
@@ -113,8 +113,11 @@
   <color name="routing_slot_background_pressed">#FFF0F0F0</color>
   <color name="routing_slot_background_pressed_night">@color/bg_window_night</color>
   <color name="routing_slot_shadow">#3D000000</color>
-  <color name="routing_button_tint">#80FFFFFF</color>
-  <color name="routing_button_pressed_tint">#FFFFFFFF</color>
+  <color name="routing_button_tint">#FFFFFFFF</color>
+  <color name="routing_button_activated_tint">@color/bg_statusbar</color>
+  <color name="routing_button_activated_tint_night">@color/bg_statusbar_night</color>
+  <color name="routing_button_pressed_tint">#80FFFFFF</color>
+
 
   <color name="bs_divider_color">@color/divider</color>
   <color name="bs_dark_divider_color">@color/divider_night</color>
