--- a/android/res/layout/routing_plan.xml
+++ b/android/res/layout/routing_plan.xml
@@ -43,37 +43,88 @@
             android:scaleType="center"
             tools:src="@drawable/ic_down" />
 
-        <LinearLayout
-            android:id="@+id/progress_frame"
+        <RadioGroup
+            android:id="@+id/route_type"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:orientation="horizontal"
-            tools:background="#80FF0000">
+            android:orientation="horizontal">
 
-          <com.mapswithme.maps.widget.WheelProgressView
-              android:id="@+id/progress_vehicle"
-              style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+          <com.mapswithme.maps.widget.RoutingToolbarButton
+              android:id="@+id/vehicle"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/routing_selector_wheel_margin"
               android:layout_marginStart="@dimen/routing_selector_wheel_margin"
-              android:layout_marginTop="@dimen/routing_selector_wheel_margin"
-              android:layout_marginBottom="@dimen/routing_selector_wheel_margin"/>
+              tools:button="@drawable/ic_car"
+              tools:buttonTint="?colorAccent" />
 
-          <com.mapswithme.maps.widget.WheelProgressView
-              android:id="@+id/progress_bicycle"
-              style="@style/MwmWidget.ProgressWheel.RoutingPlan"
-              android:layout_marginTop="@dimen/routing_selector_wheel_margin"
-              android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
+          <com.mapswithme.maps.widget.RoutingToolbarButton
+              android:id="@+id/bicycle"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
               android:layout_marginLeft="12dp"
-              android:layout_marginRight="12dp"/>
+              android:layout_marginStart="12dp"
+              android:layout_marginRight="12dp"
+              android:layout_marginEnd="12dp"
+              tools:button="@drawable/ic_bike"
+              tools:buttonTint="?iconTintLight" />
+
+          <com.mapswithme.maps.widget.RoutingToolbarButton
+              android:id="@+id/pedestrian"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginRight="12dp"
+              android:layout_marginEnd="12dp"
+              tools:button="@drawable/ic_walk"
+              tools:buttonTint="?iconTintLight" />
+
+          <com.mapswithme.maps.widget.RoutingToolbarButton
+            android:id="@+id/taxi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/routing_selector_wheel_margin"
+            android:layout_marginEnd="@dimen/routing_selector_wheel_margin"
+            tools:button="@drawable/ic_taxi"
+            tools:buttonTint="?iconTintLight" />
+        </RadioGroup>
+
+        <LinearLayout
+          android:id="@+id/progress_frame"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@id/route_type"
+          android:layout_alignStart="@id/route_type"
+          android:layout_centerInParent="true"
+          android:orientation="horizontal"
+          tools:background="#80FF0000">
 
           <com.mapswithme.maps.widget.WheelProgressView
-              android:id="@+id/progress_pedestrian"
-              style="@style/MwmWidget.ProgressWheel.RoutingPlan"
-              android:layout_marginTop="@dimen/routing_selector_wheel_margin"
-              android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
-              android:layout_marginRight="12dp"
-              android:layout_marginEnd="12dp"/>
+            android:id="@+id/progress_vehicle"
+            style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+            android:layout_marginLeft="@dimen/routing_selector_wheel_margin"
+            android:layout_marginStart="@dimen/routing_selector_wheel_margin"
+            android:layout_marginTop="@dimen/routing_selector_wheel_margin"
+            android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
+            tools:visibility="visible"/>
+
+          <com.mapswithme.maps.widget.WheelProgressView
+            android:id="@+id/progress_bicycle"
+            style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+            android:layout_marginTop="@dimen/routing_selector_wheel_margin"
+            android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"/>
+
+          <com.mapswithme.maps.widget.WheelProgressView
+            android:id="@+id/progress_pedestrian"
+            style="@style/MwmWidget.ProgressWheel.RoutingPlan"
+            android:layout_marginTop="@dimen/routing_selector_wheel_margin"
+            android:layout_marginBottom="@dimen/routing_selector_wheel_margin"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp"/>
 
           <com.mapswithme.maps.widget.WheelProgressView
             android:id="@+id/progress_taxi"
@@ -84,46 +135,6 @@
             android:layout_marginEnd="@dimen/routing_selector_wheel_margin"/>
 
         </LinearLayout>
-
-        <RadioGroup
-            android:id="@+id/route_type"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignLeft="@id/progress_frame"
-            android:layout_alignStart="@id/progress_frame"
-            android:orientation="horizontal">
-
-          <RadioButton
-              android:id="@+id/vehicle"
-              android:layout_width="@dimen/routing_selector_size"
-              android:layout_height="@dimen/routing_selector_size"
-              tools:button="@drawable/ic_drive"
-              tools:buttonTint="?colorAccent" />
-
-          <RadioButton
-              android:id="@+id/bicycle"
-              android:layout_width="@dimen/routing_selector_size"
-              android:layout_height="@dimen/routing_selector_size"
-              android:layout_marginRight="@dimen/routing_selector_wheel_margin"
-              android:layout_marginLeft="@dimen/routing_selector_wheel_margin"
-              tools:button="@drawable/ic_bicycle"
-              tools:buttonTint="?iconTintLight" />
-
-          <RadioButton
-              android:id="@+id/pedestrian"
-              android:layout_width="@dimen/routing_selector_size"
-              android:layout_height="@dimen/routing_selector_size"
-              android:layout_marginRight="@dimen/routing_selector_wheel_margin"
-              tools:button="@drawable/ic_walk"
-              tools:buttonTint="?iconTintLight" />
-
-          <RadioButton
-            android:id="@+id/taxi"
-            android:layout_width="@dimen/routing_selector_size"
-            android:layout_height="@dimen/routing_selector_size"
-            tools:button="@drawable/ic_route_type_taxi"
-            tools:buttonTint="?iconTintLight" />
-        </RadioGroup>
 
         <ImageView
             android:id="@+id/toggle"
