--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -47,7 +47,7 @@
     <item name="android:visibility">invisible</item>
     <item name="android:background">?selectableItemBackgroundBorderless</item>
     <item name="centerDrawable">@android:color/transparent</item>
-    <item name="wheelProgressColor">?routingButtonPressedHint</item>
+    <item name="wheelProgressColor">?routingButtonHint</item>
     <item name="wheelSecondaryColor">@android:color/transparent</item>
     <item name="wheelThickness">@dimen/margin_eighth</item>
   </style>
