--- a/android/res/layout/layout_nav_search.xml
+++ b/android/res/layout/layout_nav_search.xml
@@ -2,11 +2,12 @@
 <RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/search_button_frame"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:theme="?navButtonsTheme"
   tools:background="@color/bg_primary"
-  tools:showIn="@layout/layout_nav">
+  tools:showIn="@layout/activity_map">
 
   <Space
     android:id="@id/anchor_center"
