--- a/android/res/layout/fragment_auth_editor.xml
+++ b/android/res/layout/fragment_auth_editor.xml
@@ -66,7 +66,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/editor_profile_changes"
-            android:textAppearance="@style/MwmTextAppearance.Body1.Light"
+            android:textAppearance="@style/MwmTextAppearance.Body1"
+            android:textColor="@color/white_primary"
             android:textStyle="bold"/>
 
           <TextView
@@ -75,7 +76,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:textAppearance="@style/MwmTextAppearance.Body3.Light"
+            android:textAppearance="@style/MwmTextAppearance.Body3"
+            android:textColor="@color/white_secondary"
             tools:text="Last sent: 12.01.2015"/>
         </LinearLayout>
       </LinearLayout>
