[ios] Fixed layout issue.

--- a/iphone/Maps/Mapsme.storyboard
+++ b/iphone/Maps/Mapsme.storyboard
@@ -1669,7 +1669,7 @@
                                     <constraint firstItem="8t7-Lb-1dX" firstAttribute="top" secondItem="2p5-BG-sgS" secondAttribute="top" id="7Od-uU-Q64"/>
                                     <constraint firstItem="Xl1-50-Vih" firstAttribute="centerY" secondItem="2p5-BG-sgS" secondAttribute="centerY" id="BmX-8Q-qDp"/>
                                     <constraint firstAttribute="bottom" secondItem="8Dm-Lz-QG7" secondAttribute="bottom" id="D73-ss-e7B"/>
-                                    <constraint firstItem="NyD-Tz-Vq4" firstAttribute="bottom" secondItem="Xl1-50-Vih" secondAttribute="bottom" id="Pha-bw-uJj"/>
+                                    <constraint firstItem="NyD-Tz-Vq4" firstAttribute="bottom" secondItem="Xl1-50-Vih" secondAttribute="bottom" constant="1" id="Pha-bw-uJj"/>
                                     <constraint firstAttribute="trailing" secondItem="e51-Qs-t6a" secondAttribute="trailing" constant="16" id="Qoo-ts-Bm4"/>
                                     <constraint firstItem="e51-Qs-t6a" firstAttribute="leading" secondItem="Xl1-50-Vih" secondAttribute="leading" id="UHM-ci-I5N"/>
                                     <constraint firstItem="Xl1-50-Vih" firstAttribute="leading" secondItem="2p5-BG-sgS" secondAttribute="leading" constant="16" id="Z9S-WC-E2o"/>
@@ -1682,7 +1682,7 @@
                                     <constraint firstAttribute="height" constant="88" id="t59-qj-iG9"/>
                                     <constraint firstAttribute="trailing" secondItem="NyD-Tz-Vq4" secondAttribute="trailing" constant="16" id="w1o-rH-L4w"/>
                                     <constraint firstItem="8t7-Lb-1dX" firstAttribute="leading" secondItem="2p5-BG-sgS" secondAttribute="leading" id="wm7-pa-02D"/>
-                                    <constraint firstItem="e51-Qs-t6a" firstAttribute="top" secondItem="Xl1-50-Vih" secondAttribute="top" id="zdA-r9-J51"/>
+                                    <constraint firstItem="e51-Qs-t6a" firstAttribute="top" secondItem="Xl1-50-Vih" secondAttribute="top" constant="1" id="zdA-r9-J51"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="backgroundColorName" value="white"/>
@@ -3572,11 +3572,11 @@
         <image name="separator_image" width="1" height="1"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="4Cc-99-mlN"/>
-        <segue reference="7YC-t5-0WN"/>
-        <segue reference="sMq-pa-AId"/>
         <segue reference="OEF-kR-jKi"/>
         <segue reference="Tkr-Ad-FQL"/>
+        <segue reference="4Cc-99-mlN"/>
         <segue reference="4ye-8o-cjF"/>
+        <segue reference="nJf-7z-2TX"/>
+        <segue reference="Pet-Wq-d4a"/>
     </inferredMetricsTieBreakers>
 </document>
